--- a/style.css
+++ b/style.css
@@ -36,5 +36,12 @@ h1.hdr {
   height: 200px;
   background: linear-gradient(#fff4, #fff6);
   border-radius: 25px;
+  padding: 15px;
   filter: drop-shadow(0px 0px 15px #0008);
+}
+
+img.newsimg {
+  height: 200px;
+  border-radius: 25px;
+  float: left;
 }
