--- a/style.css
+++ b/style.css
@@ -45,3 +45,9 @@ img.newsimg {
   border-radius: 25px;
   float: left;
 }
+
+h1.newsh {
+  font-size: 50px;
+  filter: drop-shadow(4px 2px 5px #0005);
+  float: right;
+}
