--- a/style.css
+++ b/style.css
@@ -29,6 +29,7 @@ h1.bda {
 h1.hdr {
   font-size: 50px;
   filter: drop-shadow(4px 2px 5px #0005);
+  text-align: center;
 }
 
 .news {
@@ -51,4 +52,8 @@ h1.newsh {
   filter: drop-shadow(4px 2px 5px #0005);
   float: right;
   margin: 0px;
+}
+
+p {
+  text-align: center;
 }
