--- a/style.css
+++ b/style.css
@@ -57,3 +57,23 @@ h1.newsh {
 p {
   text-align: center;
 }
+
+.text {
+  float: right;
+  display: inline-flex;
+  text-align: left;
+  flex-direction: column;
+  width: 60%;
+}
+
+p.newsp {
+  text-align: right;
+  margin: 15px;
+}
+
+h1.newsh {
+  font-size: 50px;
+  filter: drop-shadow(4px 2px 5px #0005);
+  margin: 15px;
+  text-align: right;
+}
