--- a/style.css
+++ b/style.css
@@ -30,6 +30,7 @@ h1.hdr {
   font-size: 50px;
   filter: drop-shadow(4px 2px 5px #0005);
   text-align: center;
+  margin: 15px;
 }
 
 .news {
@@ -56,6 +57,7 @@ h1.newsh {
 
 p {
   text-align: center;
+  margin: 15px;
 }
 
 .text {
