--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
-@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,200..1000;1,200..1000&display=swap')
 
 body {
   background: linear-gradient(#1c027e, #4f066b);
-  font-family: Raleway;
+  font-family: Mulish;
   color: white;
   margin: 0px;
 }
