--- a/style.css
+++ b/style.css
@@ -24,6 +24,7 @@ h1.bda {
   margin-left: 20px;
   filter: drop-shadow(4px 2px 5px #0005);
   font-size: 35px;
+  font-weight: 900;
 }
 
 h1.hdr {
@@ -34,6 +35,7 @@ h1.hdr {
   background: #0001;
   padding: 10px;
   border-radius: 35px;
+  font-weight: 900;
 }
 
 .news {
@@ -56,6 +58,7 @@ h1.newsh {
   filter: drop-shadow(4px 2px 5px #0005);
   float: right;
   margin: 0px;
+  font-weight: 700;
 }
 
 p {
@@ -77,6 +80,7 @@ p.newsp {
   margin: 15px;
   margin-top: 0px;
   text-align: right;
+  font-weight: 400;
 }
 
 h1.newsh {
