--- a/style.css
+++ b/style.css
@@ -72,7 +72,7 @@ p {
   text-align: left;
   flex-direction: column;
   width: 60%;
-  height: 100%;
+  height: 90%;
   word-wrap: break-word;
 }
 
@@ -89,4 +89,10 @@ h1.newsh {
   margin: 15px;
   margin-top: 0px;
   text-align: right;
+}
+
+.timestamp {
+  height: 10%;
+  display: flex;
+  align-items: flex-end;
 }
