--- a/style.css
+++ b/style.css
@@ -95,4 +95,10 @@ h1.newsh {
   height: 10%;
   display: flex;
   align-items: flex-end;
+  width: 60%
+}
+
+p.newsts {
+  text-align: right;
+  font-weight: 400;
 }
